--- a/dz3-master/dz3-common/pom.xml
+++ b/dz3-master/dz3-common/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>dz3-master</artifactId>
         <groupId>net.sf.dz3</groupId>
-        <version>3.6.7-SNAPSHOT</version>
+        <version>3.6.7</version>
         <relativePath>..</relativePath>
     </parent>
     <dependencies>
