--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+  id 'net.ltgt.errorprone' version '1.1.1' apply false
+}
+
 group = 'net.sf.dz3'
 version = '3.6.8-SNAPSHOT'
 
@@ -22,6 +26,8 @@ subprojects {
         toolVersion = "0.8.5"
     }
 
+    apply plugin: 'net.ltgt.errorprone'
+
     dependencies {
 
         implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
@@ -29,5 +35,7 @@ subprojects {
 
         testImplementation 'org.mockito:mockito-core:3.3.3'
         testImplementation 'junit:junit:4.13.1'
+
+        errorprone 'com.google.errorprone:error_prone_core:2.3.4'
     }
 }
