--- a/dz3-master/dz3-model/build.gradle
+++ b/dz3-master/dz3-model/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
 
-    compile 'net.sf.servomaster:servomaster-common:2.0.0-SNAPSHOT'
-
-    compile project(':dz3-sensors')
+    api 'net.sf.servomaster:servomaster-common:2.0.0-SNAPSHOT'
+    api project(':dz3-owapi')
+    api project(':dz3-sensors')
 }
