--- a/dz3-common/build.gradle
+++ b/dz3-common/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
 
     api 'org.apache.commons:commons-lang3:3.3.2'
-    api 'net.sf.jukebox:jukebox-datastream:7.0.0-SNAPSHOT'
+    api project(':jukebox:jukebox-datastream')
 }
